[package]
name = "dynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dynamodb"

[[bin]]
name = "dynamodb"

[dependencies]
duration_string = {package = "duration-string", version = "0.3", optional = true}
chrono = {version = "0.4", optional = true}
serde = {version = "1", features = ["derive"]}
bson = {version = "2", optional = true}
uuid = {version = "1", optional = true}
base64 = "0.21"
bytes = "1.4"

[features]
default = []
bson = ["dep:bson"]
uuid = ["dep:uuid"]
serde = ["chrono?/serde"]
time = ["dep:chrono", "dep:duration_string"]
full = ["bson", "uuid", "time", "serde"]